--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.25.0",
     "luxon": "^3.0.3",
+    "uuid": "^9.0.0",
     "vite": "^3.0.9",
     "vue": "^3.0.0",
     "vue-multiselect": "^3.0.0-alpha.2",
