--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb://0.0.0.0:27017/CIS4339_Group5
+MONGO_URL = mongodb+srv://user:7QHBAbsJLmBbnPpc@cluster0.jg6ollk.mongodb.net/CIS4339_Group5
 PORT = 3000
 ORG_ID = 1697834
 ORG_NAME = STRAWHATS
